syntax = "proto3";

option go_package = "./notification_proto_gen";

message Metadata {
  int64 limit = 1;
  int64 page = 2;
  bool hasPrevious = 3;
  bool hasNext = 4;
  int64 totalItems = 5;
  int64 totalPages = 6;
}